--- a/android_foodwatcher/app/src/main/res/navigation/mobile_navigation.xml
+++ b/android_foodwatcher/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,37 +7,38 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="ca.qc.cgmatane.foodwatcher.ui.home.HomeFragment"
+        android:name="ca.qc.cgmatane.foodwatcher.vue.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="ca.qc.cgmatane.foodwatcher.ui.gallery.GalleryFragment"
+        android:name="ca.qc.cgmatane.foodwatcher.vue.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="ca.qc.cgmatane.foodwatcher.ui.slideshow.SlideshowFragment"
+        android:name="ca.qc.cgmatane.foodwatcher.vue.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/nav_tools"
-        android:name="ca.qc.cgmatane.foodwatcher.ui.tools.ToolsFragment"
+        android:name="ca.qc.cgmatane.foodwatcher.vue.carte.FragmentCarte"
         android:label="@string/menu_tools"
-        tools:layout="@layout/fragment_tools" />
+        tools:layout="@layout/fragment_carte" />
 
     <fragment
         android:id="@+id/nav_share"
-        android:name="ca.qc.cgmatane.foodwatcher.ui.share.ShareFragment"
+        android:name="ca.qc.cgmatane.foodwatcher.vue.share.ShareFragment"
         android:label="@string/menu_share"
         tools:layout="@layout/fragment_share" />
 
     <fragment
         android:id="@+id/nav_send"
-        android:name="ca.qc.cgmatane.foodwatcher.ui.send.SendFragment"
+        android:name="ca.qc.cgmatane.foodwatcher.vue.send.SendFragment"
         android:label="@string/menu_send"
         tools:layout="@layout/fragment_send" />
+
 </navigation>
