--- a/android_foodwatcher/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android_foodwatcher/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:title="@string/menu_map" />
     </group>
 
     <item android:title="Communicate">
