--- a/android_foodwatcher/app/src/main/res/navigation/mobile_navigation.xml
+++ b/android_foodwatcher/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,9 +25,9 @@
 
     <fragment
         android:id="@+id/nav_tools"
-        android:name="ca.qc.cgmatane.foodwatcher.vue.carte.FragmentCarte"
-        android:label="@string/menu_tools"
-        tools:layout="@layout/fragment_carte" />
+        android:name="ca.qc.cgmatane.foodwatcher.vue.carte.MapFragment"
+        android:label="@string/menu_map"
+        tools:layout="@layout/fragment_map" />
 
     <fragment
         android:id="@+id/nav_share"
