--- a/android_foodwatcher/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android_foodwatcher/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,9 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_maison"
             android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:title="@string/menu_maison" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
@@ -17,7 +17,7 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
         <item
-            android:id="@+id/nav_tools"
+            android:id="@+id/nav_carte"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_map" />
     </group>
