--- a/android_foodwatcher/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android_foodwatcher/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_maison"
+            android:id="nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_maison" />
         <item
@@ -17,7 +17,7 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
         <item
-            android:id="@+id/nav_carte"
+            android:id="@+id/nav_map"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_map" />
     </group>
