--- a/android_foodwatcher/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android_foodwatcher/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,22 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-<!--    <group android:checkableBehavior="single">-->
-<!--        <item-->
-<!--            android:id="nav_home"-->
-<!--            android:icon="@drawable/ic_menu_camera"-->
-<!--            android:title="@string/menu_home" />-->
-<!--    </group>-->
-
-    <item android:title="Maisons"
-        android:checkable="false"
-        android:id="@+id/home_group">
-        <menu>
-            <!-- filled at runtime -->
-        </menu>
-    </item>
+<!--    <item android:title="Maisons"-->
+<!--        android:checkable="false"-->
+<!--        android:id="@+id/home_group">-->
+<!--        <menu>-->
+<!--            &lt;!&ndash; filled at runtime &ndash;&gt;-->
+<!--        </menu>-->
+<!--    </item>-->
 
     <group>
+        <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_map"
             android:icon="@drawable/ic_menu_manage"
