--- a/android_foodwatcher/app/src/main/res/values/colors.xml
+++ b/android_foodwatcher/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#344955</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#4A6572</color>
+    <color name="colorButton">#F9AA33</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
