--- a/android_foodwatcher/app/src/main/res/layout/item_produit.xml
+++ b/android_foodwatcher/app/src/main/res/layout/item_produit.xml
@@ -10,7 +10,7 @@
 
 <GridLayout android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:columnCount="2"
