--- a/android_foodwatcher/app/src/main/res/layout/view_stock.xml
+++ b/android_foodwatcher/app/src/main/res/layout/view_stock.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/view_stock"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/colorAccent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_master_constraint_layout"
+        app:layout_constraintEnd_toEndOf="@+id/activity_master_constraint_layout"
+        app:layout_constraintStart_toStartOf="@+id/activity_master_constraint_layout"
+        app:layout_constraintTop_toTopOf="@+id/activity_master_constraint_layout" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
