--- a/android_foodwatcher/app/src/main/res/layout/view_stock.xml
+++ b/android_foodwatcher/app/src/main/res/layout/view_stock.xml
@@ -5,14 +5,24 @@
     android:layout_height="match_parent"
     android:background="?attr/colorAccent"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_margin="0dp">
+    <Button
+        android:id="@+id/btn_view_stock_add_product"
+        android:layout_width="match_parent"
+        android:text="Ajouter un produit"
+        android:backgroundTint="@color/colorButton"
+        android:layout_height="wrap_content"/>
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_master_constraint_layout"
-        app:layout_constraintEnd_toEndOf="@+id/activity_master_constraint_layout"
-        app:layout_constraintStart_toStartOf="@+id/activity_master_constraint_layout"
-        app:layout_constraintTop_toTopOf="@+id/activity_master_constraint_layout" />
+        android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </RelativeLayout>
