--- a/android_foodwatcher/app/src/main/res/layout/view_add_product.xml
+++ b/android_foodwatcher/app/src/main/res/layout/view_add_product.xml
@@ -7,7 +7,6 @@
     tools:context=".view.AddProductActivity">
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,6 +15,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/view_add_product_img"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:padding="15dp"
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="Image" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
