--- a/android_foodwatcher/app/src/main/res/layout/view_add_product.xml
+++ b/android_foodwatcher/app/src/main/res/layout/view_add_product.xml
@@ -7,7 +7,7 @@
     tools:context=".view.AddProductActivity">
 
 
-    <!--<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -85,12 +85,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
                 android:layout_marginRight="12dp"
-                android:layout_toStartOf="@id/btn_view_add_product_action_add"
-                android:layout_toLeftOf="@id/btn_view_add_product_action_add"
+                android:layout_toStartOf="@+id/btn_view_add_product_action_add"
+                android:layout_toLeftOf="@+id/btn_view_add_product_action_add"
                 android:text="@string/bouton_annuler" />
 
         </RelativeLayout>
-    </LinearLayout>-->
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
