--- a/android_foodwatcher/app/src/main/res/layout/view_add_product.xml
+++ b/android_foodwatcher/app/src/main/res/layout/view_add_product.xml
@@ -5,12 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.AddProductActivity">
-
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:rowCount="2">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_column="0"
+        android:layout_row="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +100,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_column="0"
+        android:layout_row="1">
         <ImageView
             android:id="@+id/view_add_product_img"
             android:layout_width="match_parent"
@@ -105,5 +112,6 @@
             android:src="@mipmap/ic_launcher"
             android:contentDescription="Image" />
     </LinearLayout>
+    </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
