--- a/android_foodwatcher/app/src/main/res/layout/vue_stock_recycler_view_item_produit.xml
+++ b/android_foodwatcher/app/src/main/res/layout/vue_stock_recycler_view_item_produit.xml
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="1"
-        android:layout_gravity="center">
+        android:layout_gravity="right|center">
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bouton_test"
             android:layout_alignParentEnd="true"
