--- a/android_foodwatcher/app/src/main/res/layout/vue_liste_course_recycler_view_item_produit.xml
+++ b/android_foodwatcher/app/src/main/res/layout/vue_liste_course_recycler_view_item_produit.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<LinearLayout
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
+   >
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="2">
+        android:columnCount="2"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
         <LinearLayout
             android:layout_row="0"
             android:layout_column="0">
@@ -17,22 +20,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nom du produit"
-                android:layout_margin="10"
-                android:textSize="24"></TextView>
+                android:layout_margin="10dp"
+                android:textSize="24sp"></TextView>
         </LinearLayout>
         <LinearLayout
             android:layout_row="0"
             android:layout_column="1"
             android:layout_gravity="right|center_vertical"
-            android:layout_marginRight="10">
+            android:layout_marginRight="10dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Nom du produit"
-                android:textSize="20"></TextView>
+                android:text="Quantité"
+                android:textSize="20sp"></TextView>
         </LinearLayout>
 
     </GridLayout>
-</LinearLayout>
-</LinearLayout>
+</androidx.cardview.widget.CardView>
