--- a/android_foodwatcher/app/src/main/res/layout/vue_liste_course_recycler_view_item_produit.xml
+++ b/android_foodwatcher/app/src/main/res/layout/vue_liste_course_recycler_view_item_produit.xml
@@ -17,11 +17,12 @@
             android:layout_column="0">
 
             <TextView
+                android:id="@+id/nom_produit_liste_course"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nom du produit"
                 android:layout_margin="10dp"
-                android:textSize="24sp"></TextView>
+                android:textSize="24sp" />
         </LinearLayout>
         <LinearLayout
             android:layout_row="0"
