ajout d'un bouton permettant de supprimer l'element selectionné

--- a/android_foodwatcher/app/src/main/res/layout/vue_liste_de_course.xml
+++ b/android_foodwatcher/app/src/main/res/layout/vue_liste_de_course.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".vue.ListeDeCourse">
+    android:layout_height="match_parent">
 
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".vue.ListeDeCourse">
+        <Button
+            android:id="@+id/btn_vue_liste_course_action_supprimer"
+            android:layout_width="match_parent"
+            android:text="Supprimer"
+            android:backgroundTint="@color/colorButton"
+            android:layout_height="wrap_content"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_liste_de_courses"
             android:layout_width="match_parent"
@@ -13,4 +25,5 @@
         </androidx.recyclerview.widget.RecyclerView>
 
 
+</LinearLayout>
 </RelativeLayout>
