--- a/android_foodwatcher/app/src/main/res/layout/vue_liste_course_recycler_view_item_produit.xml
+++ b/android_foodwatcher/app/src/main/res/layout/vue_liste_course_recycler_view_item_produit.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-   >
+    android:id="@+id/element_liste_vue_liste_course">
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
