possibilite d ajouter des produits
 et ajout d un champ pour la conservation

--- a/android_foodwatcher/app/src/main/res/layout/vue_ajouter_produit.xml
+++ b/android_foodwatcher/app/src/main/res/layout/vue_ajouter_produit.xml
@@ -56,6 +56,23 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:hint="@string/hint_jours_conservation"
+            app:boxStrokeColor="@color/colorButton"
+            app:hintTextColor="@color/colorButton">
+
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/jours_conservation_text_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:maxLines="1" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/quantite_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
