--- a/android_foodwatcher/app/src/main/res/menu/activite_maitresse_drawer.xml
+++ b/android_foodwatcher/app/src/main/res/menu/activite_maitresse_drawer.xml
@@ -15,7 +15,7 @@
         <item
             android:id="@+id/activity_master_drawer_action_add_home"
             android:icon="@drawable/ic_add"
-            android:title="Ajouter une maison"/>
+            android:title="Ajouter une stock"/>
     </group>
 
     <group android:checkableBehavior="single">
