--- a/android_foodwatcher/app/src/main/res/layout/activite_liste_course_recycler_view_item_produit.xml
+++ b/android_foodwatcher/app/src/main/res/layout/activite_liste_course_recycler_view_item_produit.xml
@@ -31,6 +31,7 @@
             android:layout_marginRight="10dp">
 
             <TextView
+                android:id="@+id/quantite_liste_course"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Quantité"
