--- a/android_foodwatcher/app/src/main/res/values/styles.xml
+++ b/android_foodwatcher/app/src/main/res/values/styles.xml
@@ -17,4 +17,11 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
+    <!--  Scanner theme  -->
+    <style name="ScanTheme">
+        <item name="android:orientation">vertical</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
 </resources>
