--- a/android_foodwatcher/app/src/main/res/menu/activite_maitresse_drawer.xml
+++ b/android_foodwatcher/app/src/main/res/menu/activite_maitresse_drawer.xml
@@ -5,7 +5,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/activity_master_drawer_section_home"
-            android:title="Mes Maisons">
+            android:title="@string/drawer_menu_titre_rubrique_stock">
             <menu>
             </menu>
         </item>
@@ -15,36 +15,35 @@
         <item
             android:id="@+id/activity_master_drawer_action_add_home"
             android:icon="@drawable/ic_add"
-            android:title="Ajouter une stock"/>
+            android:title="@string/drawer_menu_item_ajouter_stock"/>
     </group>
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/activity_master_drawer_action_display_shopping_list"
             android:icon="@drawable/ic_caddie"
-            android:title="Ma liste de courses"/>
+            android:title="@string/drawer_menu_item_liste_course"/>
         <item
             android:id="@+id/activity_master_drawer_action_find_store"
             android:icon="@drawable/ic_store"
-            android:title="Où faire mes courses ?"/>
+            android:title="@string/drawer_menu_item_carte_magasin"/>
     </group>
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/activity_master_drawer_action_display_settings"
             android:icon="@drawable/ic_settings"
-            android:title="Paramètres"/>
+            android:title="@string/drawer_menu_parametre"/>
         <item
             android:id="@+id/activity_master_drawer_action_display_help"
             android:icon="@drawable/ic_help"
             android:title="Aide"/>
     </group>
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/activity_master_drawer_action_display_sample"
-            android:icon="@drawable/ic_android"
-            android:title="Sample"/>
-    </group>
-
+<!--    <group android:checkableBehavior="single">-->
+<!--        <item-->
+<!--            android:id="@+id/activity_master_drawer_action_display_sample"-->
+<!--            android:icon="@drawable/ic_android"-->
+<!--            android:title="Sample"/>-->
+<!--    </group>-->
 </menu>
