--- a/android_foodwatcher/app/src/main/res/layout/conteneur_principal.xml
+++ b/android_foodwatcher/app/src/main/res/layout/conteneur_principal.xml
@@ -23,7 +23,7 @@
             android:background="?attr/colorPrimary"
             app:theme="@style/ToolBarStyle" />
 
-        <!-- ConstraintLayout for differents view -->
+        <!-- ConstraintLayout for differents vue -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/activity_master_constraint_layout"
             android:layout_width="match_parent"
