ajout d'un menu dans la barre d'outil de ActiviteStock pour export stock

--- a/android_foodwatcher/app/src/main/res/menu/activite_stock_barre_outil.xml
+++ b/android_foodwatcher/app/src/main/res/menu/activite_stock_barre_outil.xml
@@ -6,13 +6,6 @@
     <item
         android:id="@+id/activite_stock_barre_outil_action_exporter_stock"
         android:orderInCategory="100"
-        android:title="Write 'Hello'"
+        android:title="@string/exporter_le_stock"
         app:showAsAction="never" />
-
-    <item
-        android:id="@+id/activite_exemple_barre_outil_action_ecrire_world"
-        android:orderInCategory="100"
-        android:title="Write 'world !'"
-        app:showAsAction="never" />
-
 </menu>
