--- a/android_foodwatcher/app/src/main/res/menu/activite_stock_barre_outil.xml
+++ b/android_foodwatcher/app/src/main/res/menu/activite_stock_barre_outil.xml
@@ -5,7 +5,14 @@
 
     <item
         android:id="@+id/activite_stock_barre_outil_action_exporter_stock"
-        android:orderInCategory="100"
-        android:title="@string/exporter_le_stock"
+        android:orderInCategory="1"
+        android:title="@string/activite_stock_barre_outil_item_exporter"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/activite_stock_barre_outil_action_supprimer_stock"
+        android:orderInCategory="2"
+        android:title="@string/activite_stock_barre_outil_item_supprimer"
+        app:showAsAction="never" />
+
 </menu>
